Trailing whitespace should not be trimmed from values in .properties files
Categories
(Core :: Internationalization, defect, P3)
Tracking
()
People
(Reporter: eemeli, Assigned: eemeli)
References
Details
Attachments
(1 file)
Since at least Firebird 0.6, we've been trimming the trailing spaces and tabs from .properties values, which is different from how the java.util.properties
implementations parse the files:
Any white space after the key is skipped; if the first non-white space character after the key is '=' or ':', then it is ignored and any white space characters after it are also skipped. All remaining characters on the line become part of the associated element string; if there are no remaining characters, the element is the empty string "".
By now, we no longer have any source values which include trailing whitespace, but we do have 1096 localized strings that include trailing spaces, most because they were translated from an earlier en-US source that included a trailing space.
In Pontoon, trailing whitespace in .properties values is treated as a warning, just as empty values are.
We should fix all of the localized strings (much easier once bug 1877097 lands) and stop trimming the values.
Assignee | ||
Comment 1•1 year ago
|
||
Assignee | ||
Comment 2•1 year ago
|
||
The trailing spaces were fixed in localized strings in mozilla-l10n/firefox-l10n#9.
Updated•1 year ago
|
Comment 4•1 year ago
|
||
bugherder |
Comment 5•1 year ago
|
||
Would there be any value from a long-term maintainability standpoint to taking this on ESR128?
Assignee | ||
Comment 6•1 year ago
|
||
No need for an ESR uplift. Any patch releases will end up picking up the trimmed strings for their localizations, and there's no harm in attempting to trim them during formatting.
Description
•