Bug 1900765 - Stop trimming trailing whitespace from .properties values. r=xpcom-reviewers,nika

Differential Revision: https://phabricator.services.mozilla.com/D212665